LPK-1425 fix long bulletin comments by pre-wrapping

--- a/resources/private/common-html/sass/partials/_bulletin-comments.scss
+++ b/resources/private/common-html/sass/partials/_bulletin-comments.scss
@@ -24,6 +24,9 @@
   .bulletin-comment__body {
     padding: $marginS $marginM;
     clear: both;
+    pre {
+      white-space: pre-wrap;
+    }
   }
   .bulletin-comment__attachments {
     margin-bottom: $marginS;
